test/Fail/Issue4586LetPatternAbsurd.err
Issue4586LetPatternAbsurd.agda:5.12-14: error: [NotAValidLetBinding.NotAValidLetPattern]
Not a valid let pattern
when scope checking let () = Set in Set
